-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.10.1
-
Windows
-
ec0ad4ca9207acbc524a109ffbacb6cbb0fa18a8
If QML ComboBox is closed through a timer (comboBox.visible = false) while the popup is open, the popup is not closed.
This happens with both controls 1 and controls 2 popups.
In controls 2 there is a workaround, setting focus = false in onVisibilityChanged slot of the ComboBox closes the popup. But this workaround doesn't work for controls 1.
onVisibleChanged: {
comboBox.focus = false
}
- relates to
-
QTBUG-68963 [QtQuickControls 1]: If QML ComboBox is closed through a timer (visible = false), the open popup is not closed
-
- Closed
-