ComboBox: reset when hidden

Close the popup and reset the pressed state. Same as in focusOutEvent().

Task-number: QTBUG-67684
Change-Id: I51143175b0f90f3edd116723481faed6ac6e7988
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>